parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Unused terminals:

    CTE_BOOL
    BOOL

Grammar

Rule 0     S' -> estatuto
Rule 1     empty -> <empty>
Rule 2     estatuto -> declaracion estatuto_2
Rule 3     estatuto -> estatuto_2
Rule 4     estatuto_2 -> opciones estatuto_2
Rule 5     estatuto_2 -> empty
Rule 6     opciones -> asignacion
Rule 7     opciones -> function destroyVars
Rule 8     opciones -> condicion
Rule 9     opciones -> escritura
Rule 10    opciones -> ciclo
Rule 11    opciones -> turnleft
Rule 12    opciones -> turnright
Rule 13    opciones -> move
Rule 14    opciones -> checkwall
Rule 15    opciones -> pickbeeper
Rule 16    opciones -> putbeeper
Rule 17    opciones -> funcionUsuario
Rule 18    declaracion -> tipo ID declaracion_aux imprimePuntoYComa declaracion_3
Rule 19    declaracion_aux -> declaracion_2
Rule 20    declaracion_aux -> empty
Rule 21    declaracion_2 -> imprimeComa ID a
Rule 22    a -> declaracion_2
Rule 23    a -> empty
Rule 24    declaracion_3 -> declaracion
Rule 25    declaracion_3 -> empty
Rule 26    tipo -> INT
Rule 27    tipo -> FLOAT
Rule 28    tipo -> STRING
Rule 29    asignacion -> ID EQUIVALE asignacion_aux
Rule 30    asignacion_aux -> exp imprimePuntoYComa
Rule 31    asignacion_aux -> funcionUsuario
Rule 32    exp -> expresion exp_2
Rule 33    exp_2 -> imprimeDiferente expresion
Rule 34    exp_2 -> imprimeMayorQue expresion
Rule 35    exp_2 -> imprimeMenorQue expresion
Rule 36    exp_2 -> imprimeIgualA expresion
Rule 37    exp_2 -> imprimeMayorIgual expresion
Rule 38    exp_2 -> imprimeMenorIgual expresion
Rule 39    exp_2 -> empty
Rule 40    expresion -> termino expresion_2
Rule 41    expresion_2 -> SUMA expresion
Rule 42    expresion_2 -> RESTA expresion
Rule 43    expresion_2 -> empty
Rule 44    termino -> factor termino_2
Rule 45    termino_2 -> MatchMultiplicacion
Rule 46    termino_2 -> MatchDivision
Rule 47    termino_2 -> empty
Rule 48    MatchMultiplicacion -> MULTIPLICACION termino
Rule 49    MatchDivision -> DIVISION termino
Rule 50    factor -> imprimeParentesisIzq exp imprimeParentesisDer
Rule 51    factor -> var_cte
Rule 52    var_cte -> matchID
Rule 53    var_cte -> matchCteInt
Rule 54    var_cte -> matchCteFloat
Rule 55    matchID -> ID
Rule 56    matchCteInt -> CTE_INT
Rule 57    matchCteFloat -> CTE_FLOAT
Rule 58    condicion -> imprimeIf condicion_2 imprimeDosPuntos estatuto_2 imprimeEndIf condicion_3 condicion_4
Rule 59    condicion_2 -> exp
Rule 60    condicion_2 -> checkwall
Rule 61    condicion_3 -> imprimeElif condicion_2 imprimeDosPuntos estatuto_2 imprimeEndElif condicion_3
Rule 62    condicion_3 -> empty
Rule 63    condicion_4 -> imprimeElse imprimeDosPuntos estatuto_2 imprimeEndElse
Rule 64    condicion_4 -> empty
Rule 65    escritura -> imprimePrint imprimeParentesisIzq escritura_2 imprimeParentesisDer imprimePuntoYComa
Rule 66    escritura_2 -> CTE_STRING
Rule 67    escritura_2 -> exp
Rule 68    ciclo -> imprimeWhile exp imprimeDosPuntos estatuto_2 imprimeEndWhile
Rule 69    function -> imprimeDef aux ID imprimeParentesisIzq function_aux imprimeParentesisDer imprimeDosPuntos estatuto function_4 imprimeEndDef
Rule 70    aux -> tipo
Rule 71    aux -> empty
Rule 72    function_aux -> function_2
Rule 73    function_aux -> empty
Rule 74    function_2 -> tipo ID function_3
Rule 75    function_3 -> COMA function_aux
Rule 76    function_3 -> empty
Rule 77    function_4 -> imprimeReturn function_5 imprimePuntoYComa
Rule 78    function_4 -> empty
Rule 79    function_5 -> exp
Rule 80    function_5 -> empty
Rule 81    destroyVars -> empty
Rule 82    funcionUsuario -> ID imprimeParentesisIzq functionUsuario_parametros imprimeParentesisDer imprimePuntoYComa
Rule 83    functionUsuario_parametros -> functionUsuario_aux1
Rule 84    functionUsuario_parametros -> empty
Rule 85    functionUsuario_aux1 -> tipo ID functionUsuario_aux2
Rule 86    functionUsuario_aux2 -> COMA functionUsuario_aux1
Rule 87    functionUsuario_aux2 -> empty
Rule 88    checkwall -> CHECKWALL imprimeParentesisIzq imprimeParentesisDer imprimePuntoYComa
Rule 89    move -> MOVE imprimeParentesisIzq imprimeParentesisDer imprimePuntoYComa
Rule 90    turnright -> TURN_RIGHT imprimeParentesisIzq imprimeParentesisDer imprimePuntoYComa
Rule 91    turnleft -> TURN_LEFT imprimeParentesisIzq imprimeParentesisDer imprimePuntoYComa
Rule 92    pickbeeper -> PICK_BEEPER imprimeParentesisIzq imprimeParentesisDer imprimePuntoYComa
Rule 93    putbeeper -> PUT_BEEPER imprimeParentesisIzq imprimeParentesisDer imprimePuntoYComa
Rule 94    imprimeReturn -> RETURN
Rule 95    imprimeDef -> DEF
Rule 96    imprimeEndDef -> END_DEF
Rule 97    imprimeWhile -> WHILE
Rule 98    imprimeEndWhile -> END_WHILE
Rule 99    imprimePrint -> PRINT
Rule 100   imprimeParentesisIzq -> PARENTESIS_IZQ
Rule 101   imprimeParentesisDer -> PARENTESIS_DER
Rule 102   imprimeElse -> ELSE
Rule 103   imprimeEndElse -> END_ELSE
Rule 104   imprimeElif -> ELIF
Rule 105   imprimeEndElif -> END_ELIF
Rule 106   imprimeIf -> IF
Rule 107   imprimeDosPuntos -> DOS_PUNTOS
Rule 108   imprimeEndIf -> END_IF
Rule 109   imprimeDiferente -> DIFERENTE
Rule 110   imprimeMayorQue -> MAYOR_QUE
Rule 111   imprimeMenorQue -> MENOR_QUE
Rule 112   imprimeIgualA -> IGUAL_A
Rule 113   imprimeMayorIgual -> MAYOR_IGUAL
Rule 114   imprimeMenorIgual -> MENOR_IGUAL
Rule 115   imprimeEquivale -> EQUIVALE
Rule 116   imprimeID -> ID
Rule 117   imprimePuntoYComa -> PUNTO_Y_COMA
Rule 118   imprimeComa -> COMA

Terminals, with rules where they appear

BOOL                 : 
CHECKWALL            : 88
COMA                 : 75 86 118
CTE_BOOL             : 
CTE_FLOAT            : 57
CTE_INT              : 56
CTE_STRING           : 66
DEF                  : 95
DIFERENTE            : 109
DIVISION             : 49
DOS_PUNTOS           : 107
ELIF                 : 104
ELSE                 : 102
END_DEF              : 96
END_ELIF             : 105
END_ELSE             : 103
END_IF               : 108
END_WHILE            : 98
EQUIVALE             : 29 115
FLOAT                : 27
ID                   : 18 21 29 55 69 74 82 85 116
IF                   : 106
IGUAL_A              : 112
INT                  : 26
MAYOR_IGUAL          : 113
MAYOR_QUE            : 110
MENOR_IGUAL          : 114
MENOR_QUE            : 111
MOVE                 : 89
MULTIPLICACION       : 48
PARENTESIS_DER       : 101
PARENTESIS_IZQ       : 100
PICK_BEEPER          : 92
PRINT                : 99
PUNTO_Y_COMA         : 117
PUT_BEEPER           : 93
RESTA                : 42
RETURN               : 94
STRING               : 28
SUMA                 : 41
TURN_LEFT            : 91
TURN_RIGHT           : 90
WHILE                : 97
error                : 

Nonterminals, with rules where they appear

MatchDivision        : 46
MatchMultiplicacion  : 45
a                    : 21
asignacion           : 6
asignacion_aux       : 29
aux                  : 69
checkwall            : 14 60
ciclo                : 10
condicion            : 8
condicion_2          : 58 61
condicion_3          : 58 61
condicion_4          : 58
declaracion          : 2 24
declaracion_2        : 19 22
declaracion_3        : 18
declaracion_aux      : 18
destroyVars          : 7
empty                : 5 20 23 25 39 43 47 62 64 71 73 76 78 80 81 84 87
escritura            : 9
escritura_2          : 65
estatuto             : 69 0
estatuto_2           : 2 3 4 58 61 63 68
exp                  : 30 50 59 67 68 79
exp_2                : 32
expresion            : 32 33 34 35 36 37 38 41 42
expresion_2          : 40
factor               : 44
funcionUsuario       : 17 31
function             : 7
functionUsuario_aux1 : 83 86
functionUsuario_aux2 : 85
functionUsuario_parametros : 82
function_2           : 72
function_3           : 74
function_4           : 69
function_5           : 77
function_aux         : 69 75
imprimeComa          : 21
imprimeDef           : 69
imprimeDiferente     : 33
imprimeDosPuntos     : 58 61 63 68 69
imprimeElif          : 61
imprimeElse          : 63
imprimeEndDef        : 69
imprimeEndElif       : 61
imprimeEndElse       : 63
imprimeEndIf         : 58
imprimeEndWhile      : 68
imprimeEquivale      : 
imprimeID            : 
imprimeIf            : 58
imprimeIgualA        : 36
imprimeMayorIgual    : 37
imprimeMayorQue      : 34
imprimeMenorIgual    : 38
imprimeMenorQue      : 35
imprimeParentesisDer : 50 65 69 82 88 89 90 91 92 93
imprimeParentesisIzq : 50 65 69 82 88 89 90 91 92 93
imprimePrint         : 65
imprimePuntoYComa    : 18 30 65 77 82 88 89 90 91 92 93
imprimeReturn        : 77
imprimeWhile         : 68
matchCteFloat        : 54
matchCteInt          : 53
matchID              : 52
move                 : 13
opciones             : 4
pickbeeper           : 15
putbeeper            : 16
termino              : 40 48 49
termino_2            : 44
tipo                 : 18 70 74 85
turnleft             : 11
turnright            : 12
var_cte              : 51

Parsing method: LALR

state 0

    (0) S' -> . estatuto
    (2) estatuto -> . declaracion estatuto_2
    (3) estatuto -> . estatuto_2
    (18) declaracion -> . tipo ID declaracion_aux imprimePuntoYComa declaracion_3
    (4) estatuto_2 -> . opciones estatuto_2
    (5) estatuto_2 -> . empty
    (26) tipo -> . INT
    (27) tipo -> . FLOAT
    (28) tipo -> . STRING
    (6) opciones -> . asignacion
    (7) opciones -> . function destroyVars
    (8) opciones -> . condicion
    (9) opciones -> . escritura
    (10) opciones -> . ciclo
    (11) opciones -> . turnleft
    (12) opciones -> . turnright
    (13) opciones -> . move
    (14) opciones -> . checkwall
    (15) opciones -> . pickbeeper
    (16) opciones -> . putbeeper
    (17) opciones -> . funcionUsuario
    (1) empty -> .
    (29) asignacion -> . ID EQUIVALE asignacion_aux
    (69) function -> . imprimeDef aux ID imprimeParentesisIzq function_aux imprimeParentesisDer imprimeDosPuntos estatuto function_4 imprimeEndDef
    (58) condicion -> . imprimeIf condicion_2 imprimeDosPuntos estatuto_2 imprimeEndIf condicion_3 condicion_4
    (65) escritura -> . imprimePrint imprimeParentesisIzq escritura_2 imprimeParentesisDer imprimePuntoYComa
    (68) ciclo -> . imprimeWhile exp imprimeDosPuntos estatuto_2 imprimeEndWhile
    (91) turnleft -> . TURN_LEFT imprimeParentesisIzq imprimeParentesisDer imprimePuntoYComa
    (90) turnright -> . TURN_RIGHT imprimeParentesisIzq imprimeParentesisDer imprimePuntoYComa
    (89) move -> . MOVE imprimeParentesisIzq imprimeParentesisDer imprimePuntoYComa
    (88) checkwall -> . CHECKWALL imprimeParentesisIzq imprimeParentesisDer imprimePuntoYComa
    (92) pickbeeper -> . PICK_BEEPER imprimeParentesisIzq imprimeParentesisDer imprimePuntoYComa
    (93) putbeeper -> . PUT_BEEPER imprimeParentesisIzq imprimeParentesisDer imprimePuntoYComa
    (82) funcionUsuario -> . ID imprimeParentesisIzq functionUsuario_parametros imprimeParentesisDer imprimePuntoYComa
    (95) imprimeDef -> . DEF
    (106) imprimeIf -> . IF
    (99) imprimePrint -> . PRINT
    (97) imprimeWhile -> . WHILE

    INT             shift and go to state 28
    FLOAT           shift and go to state 24
    STRING          shift and go to state 8
    $end            reduce using rule 1 (empty -> .)
    ID              shift and go to state 29
    TURN_LEFT       shift and go to state 34
    TURN_RIGHT      shift and go to state 19
    MOVE            shift and go to state 18
    CHECKWALL       shift and go to state 25
    PICK_BEEPER     shift and go to state 16
    PUT_BEEPER      shift and go to state 11
    DEF             shift and go to state 32
    IF              shift and go to state 27
    PRINT           shift and go to state 15
    WHILE           shift and go to state 35

    turnright                      shift and go to state 1
    estatuto_2                     shift and go to state 2
    imprimePrint                   shift and go to state 10
    putbeeper                      shift and go to state 20
    move                           shift and go to state 3
    estatuto                       shift and go to state 21
    function                       shift and go to state 22
    checkwall                      shift and go to state 5
    ciclo                          shift and go to state 23
    declaracion                    shift and go to state 7
    tipo                           shift and go to state 9
    funcionUsuario                 shift and go to state 26
    opciones                       shift and go to state 6
    asignacion                     shift and go to state 12
    turnleft                       shift and go to state 13
    empty                          shift and go to state 17
    imprimeDef                     shift and go to state 14
    escritura                      shift and go to state 30
    imprimeWhile                   shift and go to state 31
    condicion                      shift and go to state 4
    pickbeeper                     shift and go to state 33
    imprimeIf                      shift and go to state 36

state 1

    (12) opciones -> turnright .

    ID              reduce using rule 12 (opciones -> turnright .)
    TURN_LEFT       reduce using rule 12 (opciones -> turnright .)
    TURN_RIGHT      reduce using rule 12 (opciones -> turnright .)
    MOVE            reduce using rule 12 (opciones -> turnright .)
    CHECKWALL       reduce using rule 12 (opciones -> turnright .)
    PICK_BEEPER     reduce using rule 12 (opciones -> turnright .)
    PUT_BEEPER      reduce using rule 12 (opciones -> turnright .)
    DEF             reduce using rule 12 (opciones -> turnright .)
    IF              reduce using rule 12 (opciones -> turnright .)
    PRINT           reduce using rule 12 (opciones -> turnright .)
    WHILE           reduce using rule 12 (opciones -> turnright .)
    $end            reduce using rule 12 (opciones -> turnright .)
    RETURN          reduce using rule 12 (opciones -> turnright .)
    END_DEF         reduce using rule 12 (opciones -> turnright .)
    END_WHILE       reduce using rule 12 (opciones -> turnright .)
    END_IF          reduce using rule 12 (opciones -> turnright .)
    END_ELIF        reduce using rule 12 (opciones -> turnright .)
    END_ELSE        reduce using rule 12 (opciones -> turnright .)


state 2

    (3) estatuto -> estatuto_2 .

    RETURN          reduce using rule 3 (estatuto -> estatuto_2 .)
    END_DEF         reduce using rule 3 (estatuto -> estatuto_2 .)
    $end            reduce using rule 3 (estatuto -> estatuto_2 .)


state 3

    (13) opciones -> move .

    ID              reduce using rule 13 (opciones -> move .)
    TURN_LEFT       reduce using rule 13 (opciones -> move .)
    TURN_RIGHT      reduce using rule 13 (opciones -> move .)
    MOVE            reduce using rule 13 (opciones -> move .)
    CHECKWALL       reduce using rule 13 (opciones -> move .)
    PICK_BEEPER     reduce using rule 13 (opciones -> move .)
    PUT_BEEPER      reduce using rule 13 (opciones -> move .)
    DEF             reduce using rule 13 (opciones -> move .)
    IF              reduce using rule 13 (opciones -> move .)
    PRINT           reduce using rule 13 (opciones -> move .)
    WHILE           reduce using rule 13 (opciones -> move .)
    $end            reduce using rule 13 (opciones -> move .)
    RETURN          reduce using rule 13 (opciones -> move .)
    END_DEF         reduce using rule 13 (opciones -> move .)
    END_WHILE       reduce using rule 13 (opciones -> move .)
    END_IF          reduce using rule 13 (opciones -> move .)
    END_ELIF        reduce using rule 13 (opciones -> move .)
    END_ELSE        reduce using rule 13 (opciones -> move .)


state 4

    (8) opciones -> condicion .

    ID              reduce using rule 8 (opciones -> condicion .)
    TURN_LEFT       reduce using rule 8 (opciones -> condicion .)
    TURN_RIGHT      reduce using rule 8 (opciones -> condicion .)
    MOVE            reduce using rule 8 (opciones -> condicion .)
    CHECKWALL       reduce using rule 8 (opciones -> condicion .)
    PICK_BEEPER     reduce using rule 8 (opciones -> condicion .)
    PUT_BEEPER      reduce using rule 8 (opciones -> condicion .)
    DEF             reduce using rule 8 (opciones -> condicion .)
    IF              reduce using rule 8 (opciones -> condicion .)
    PRINT           reduce using rule 8 (opciones -> condicion .)
    WHILE           reduce using rule 8 (opciones -> condicion .)
    $end            reduce using rule 8 (opciones -> condicion .)
    RETURN          reduce using rule 8 (opciones -> condicion .)
    END_DEF         reduce using rule 8 (opciones -> condicion .)
    END_WHILE       reduce using rule 8 (opciones -> condicion .)
    END_IF          reduce using rule 8 (opciones -> condicion .)
    END_ELIF        reduce using rule 8 (opciones -> condicion .)
    END_ELSE        reduce using rule 8 (opciones -> condicion .)


state 5

    (14) opciones -> checkwall .

    ID              reduce using rule 14 (opciones -> checkwall .)
    TURN_LEFT       reduce using rule 14 (opciones -> checkwall .)
    TURN_RIGHT      reduce using rule 14 (opciones -> checkwall .)
    MOVE            reduce using rule 14 (opciones -> checkwall .)
    CHECKWALL       reduce using rule 14 (opciones -> checkwall .)
    PICK_BEEPER     reduce using rule 14 (opciones -> checkwall .)
    PUT_BEEPER      reduce using rule 14 (opciones -> checkwall .)
    DEF             reduce using rule 14 (opciones -> checkwall .)
    IF              reduce using rule 14 (opciones -> checkwall .)
    PRINT           reduce using rule 14 (opciones -> checkwall .)
    WHILE           reduce using rule 14 (opciones -> checkwall .)
    $end            reduce using rule 14 (opciones -> checkwall .)
    RETURN          reduce using rule 14 (opciones -> checkwall .)
    END_DEF         reduce using rule 14 (opciones -> checkwall .)
    END_WHILE       reduce using rule 14 (opciones -> checkwall .)
    END_IF          reduce using rule 14 (opciones -> checkwall .)
    END_ELIF        reduce using rule 14 (opciones -> checkwall .)
    END_ELSE        reduce using rule 14 (opciones -> checkwall .)


state 6

    (4) estatuto_2 -> opciones . estatuto_2
    (4) estatuto_2 -> . opciones estatuto_2
    (5) estatuto_2 -> . empty
    (6) opciones -> . asignacion
    (7) opciones -> . function destroyVars
    (8) opciones -> . condicion
    (9) opciones -> . escritura
    (10) opciones -> . ciclo
    (11) opciones -> . turnleft
    (12) opciones -> . turnright
    (13) opciones -> . move
    (14) opciones -> . checkwall
    (15) opciones -> . pickbeeper
    (16) opciones -> . putbeeper
    (17) opciones -> . funcionUsuario
    (1) empty -> .
    (29) asignacion -> . ID EQUIVALE asignacion_aux
    (69) function -> . imprimeDef aux ID imprimeParentesisIzq function_aux imprimeParentesisDer imprimeDosPuntos estatuto function_4 imprimeEndDef
    (58) condicion -> . imprimeIf condicion_2 imprimeDosPuntos estatuto_2 imprimeEndIf condicion_3 condicion_4
    (65) escritura -> . imprimePrint imprimeParentesisIzq escritura_2 imprimeParentesisDer imprimePuntoYComa
    (68) ciclo -> . imprimeWhile exp imprimeDosPuntos estatuto_2 imprimeEndWhile
    (91) turnleft -> . TURN_LEFT imprimeParentesisIzq imprimeParentesisDer imprimePuntoYComa
    (90) turnright -> . TURN_RIGHT imprimeParentesisIzq imprimeParentesisDer imprimePuntoYComa
    (89) move -> . MOVE imprimeParentesisIzq imprimeParentesisDer imprimePuntoYComa
    (88) checkwall -> . CHECKWALL imprimeParentesisIzq imprimeParentesisDer imprimePuntoYComa
    (92) pickbeeper -> . PICK_BEEPER imprimeParentesisIzq imprimeParentesisDer imprimePuntoYComa
    (93) putbeeper -> . PUT_BEEPER imprimeParentesisIzq imprimeParentesisDer imprimePuntoYComa
    (82) funcionUsuario -> . ID imprimeParentesisIzq functionUsuario_parametros imprimeParentesisDer imprimePuntoYComa
    (95) imprimeDef -> . DEF
    (106) imprimeIf -> . IF
    (99) imprimePrint -> . PRINT
    (97) imprimeWhile -> . WHILE

    $end            reduce using rule 1 (empty -> .)
    RETURN          reduce using rule 1 (empty -> .)
    END_DEF         reduce using rule 1 (empty -> .)
    END_WHILE       reduce using rule 1 (empty -> .)
    END_IF          reduce using rule 1 (empty -> .)
    END_ELIF        reduce using rule 1 (empty -> .)
    END_ELSE        reduce using rule 1 (empty -> .)
    ID              shift and go to state 29
    TURN_LEFT       shift and go to state 34
    TURN_RIGHT      shift and go to state 19
    MOVE            shift and go to state 18
    CHECKWALL       shift and go to state 25
    PICK_BEEPER     shift and go to state 16
    PUT_BEEPER      shift and go to state 11
    DEF             shift and go to state 32
    IF              shift and go to state 27
    PRINT           shift and go to state 15
    WHILE           shift and go to state 35

    turnright                      shift and go to state 1
    estatuto_2                     shift and go to state 37
    putbeeper                      shift and go to state 20
    move                           shift and go to state 3
    condicion                      shift and go to state 4
    checkwall                      shift and go to state 5
    ciclo                          shift and go to state 23
    funcionUsuario                 shift and go to state 26
    opciones                       shift and go to state 6
    asignacion                     shift and go to state 12
    turnleft                       shift and go to state 13
    empty                          shift and go to state 17
    imprimeDef                     shift and go to state 14
    escritura                      shift and go to state 30
    imprimeWhile                   shift and go to state 31
    imprimePrint                   shift and go to state 10
    pickbeeper                     shift and go to state 33
    function                       shift and go to state 22
    imprimeIf                      shift and go to state 36

state 7

    (2) estatuto -> declaracion . estatuto_2
    (4) estatuto_2 -> . opciones estatuto_2
    (5) estatuto_2 -> . empty
    (6) opciones -> . asignacion
    (7) opciones -> . function destroyVars
    (8) opciones -> . condicion
    (9) opciones -> . escritura
    (10) opciones -> . ciclo
    (11) opciones -> . turnleft
    (12) opciones -> . turnright
    (13) opciones -> . move
    (14) opciones -> . checkwall
    (15) opciones -> . pickbeeper
    (16) opciones -> . putbeeper
    (17) opciones -> . funcionUsuario
    (1) empty -> .
    (29) asignacion -> . ID EQUIVALE asignacion_aux
    (69) function -> . imprimeDef aux ID imprimeParentesisIzq function_aux imprimeParentesisDer imprimeDosPuntos estatuto function_4 imprimeEndDef
    (58) condicion -> . imprimeIf condicion_2 imprimeDosPuntos estatuto_2 imprimeEndIf condicion_3 condicion_4
    (65) escritura -> . imprimePrint imprimeParentesisIzq escritura_2 imprimeParentesisDer imprimePuntoYComa
    (68) ciclo -> . imprimeWhile exp imprimeDosPuntos estatuto_2 imprimeEndWhile
    (91) turnleft -> . TURN_LEFT imprimeParentesisIzq imprimeParentesisDer imprimePuntoYComa
    (90) turnright -> . TURN_RIGHT imprimeParentesisIzq imprimeParentesisDer imprimePuntoYComa
    (89) move -> . MOVE imprimeParentesisIzq imprimeParentesisDer imprimePuntoYComa
    (88) checkwall -> . CHECKWALL imprimeParentesisIzq imprimeParentesisDer imprimePuntoYComa
    (92) pickbeeper -> . PICK_BEEPER imprimeParentesisIzq imprimeParentesisDer imprimePuntoYComa
    (93) putbeeper -> . PUT_BEEPER imprimeParentesisIzq imprimeParentesisDer imprimePuntoYComa
    (82) funcionUsuario -> . ID imprimeParentesisIzq functionUsuario_parametros imprimeParentesisDer imprimePuntoYComa
    (95) imprimeDef -> . DEF
    (106) imprimeIf -> . IF
    (99) imprimePrint -> . PRINT
    (97) imprimeWhile -> . WHILE

    $end            reduce using rule 1 (empty -> .)
    RETURN          reduce using rule 1 (empty -> .)
    END_DEF         reduce using rule 1 (empty -> .)
    ID              shift and go to state 29
    TURN_LEFT       shift and go to state 34
    TURN_RIGHT      shift and go to state 19
    MOVE            shift and go to state 18
    CHECKWALL       shift and go to state 25
    PICK_BEEPER     shift and go to state 16
    PUT_BEEPER      shift and go to state 11
    DEF             shift and go to state 32
    IF              shift and go to state 27
    PRINT           shift and go to state 15
    WHILE           shift and go to state 35

    turnright                      shift and go to state 1
    estatuto_2                     shift and go to state 38
    imprimePrint                   shift and go to state 10
    putbeeper                      shift and go to state 20
    move                           shift and go to state 3
    condicion                      shift and go to state 4
    checkwall                      shift and go to state 5
    ciclo                          shift and go to state 23
    funcionUsuario                 shift and go to state 26
    opciones                       shift and go to state 6
    asignacion                     shift and go to state 12
    turnleft                       shift and go to state 13
    empty                          shift and go to state 17
    imprimeDef                     shift and go to state 14
    escritura                      shift and go to state 30
    imprimeWhile                   shift and go to state 31
    pickbeeper                     shift and go to state 33
    function                       shift and go to state 22
    imprimeIf                      shift and go to state 36

state 8

    (28) tipo -> STRING .

    ID              reduce using rule 28 (tipo -> STRING .)


state 9

    (18) declaracion -> tipo . ID declaracion_aux imprimePuntoYComa declaracion_3

    ID              shift and go to state 39


state 10

    (65) escritura -> imprimePrint . imprimeParentesisIzq escritura_2 imprimeParentesisDer imprimePuntoYComa
    (100) imprimeParentesisIzq -> . PARENTESIS_IZQ

    PARENTESIS_IZQ  shift and go to state 41

    imprimeParentesisIzq           shift and go to state 40

state 11

    (93) putbeeper -> PUT_BEEPER . imprimeParentesisIzq imprimeParentesisDer imprimePuntoYComa
    (100) imprimeParentesisIzq -> . PARENTESIS_IZQ

    PARENTESIS_IZQ  shift and go to state 41

    imprimeParentesisIzq           shift and go to state 42

state 12

    (6) opciones -> asignacion .

    ID              reduce using rule 6 (opciones -> asignacion .)
    TURN_LEFT       reduce using rule 6 (opciones -> asignacion .)
    TURN_RIGHT      reduce using rule 6 (opciones -> asignacion .)
    MOVE            reduce using rule 6 (opciones -> asignacion .)
    CHECKWALL       reduce using rule 6 (opciones -> asignacion .)
    PICK_BEEPER     reduce using rule 6 (opciones -> asignacion .)
    PUT_BEEPER      reduce using rule 6 (opciones -> asignacion .)
    DEF             reduce using rule 6 (opciones -> asignacion .)
    IF              reduce using rule 6 (opciones -> asignacion .)
    PRINT           reduce using rule 6 (opciones -> asignacion .)
    WHILE           reduce using rule 6 (opciones -> asignacion .)
    $end            reduce using rule 6 (opciones -> asignacion .)
    RETURN          reduce using rule 6 (opciones -> asignacion .)
    END_DEF         reduce using rule 6 (opciones -> asignacion .)
    END_WHILE       reduce using rule 6 (opciones -> asignacion .)
    END_IF          reduce using rule 6 (opciones -> asignacion .)
    END_ELIF        reduce using rule 6 (opciones -> asignacion .)
    END_ELSE        reduce using rule 6 (opciones -> asignacion .)


state 13

    (11) opciones -> turnleft .

    ID              reduce using rule 11 (opciones -> turnleft .)
    TURN_LEFT       reduce using rule 11 (opciones -> turnleft .)
    TURN_RIGHT      reduce using rule 11 (opciones -> turnleft .)
    MOVE            reduce using rule 11 (opciones -> turnleft .)
    CHECKWALL       reduce using rule 11 (opciones -> turnleft .)
    PICK_BEEPER     reduce using rule 11 (opciones -> turnleft .)
    PUT_BEEPER      reduce using rule 11 (opciones -> turnleft .)
    DEF             reduce using rule 11 (opciones -> turnleft .)
    IF              reduce using rule 11 (opciones -> turnleft .)
    PRINT           reduce using rule 11 (opciones -> turnleft .)
    WHILE           reduce using rule 11 (opciones -> turnleft .)
    $end            reduce using rule 11 (opciones -> turnleft .)
    RETURN          reduce using rule 11 (opciones -> turnleft .)
    END_DEF         reduce using rule 11 (opciones -> turnleft .)
    END_WHILE       reduce using rule 11 (opciones -> turnleft .)
    END_IF          reduce using rule 11 (opciones -> turnleft .)
    END_ELIF        reduce using rule 11 (opciones -> turnleft .)
    END_ELSE        reduce using rule 11 (opciones -> turnleft .)


state 14

    (69) function -> imprimeDef . aux ID imprimeParentesisIzq function_aux imprimeParentesisDer imprimeDosPuntos estatuto function_4 imprimeEndDef
    (70) aux -> . tipo
    (71) aux -> . empty
    (26) tipo -> . INT
    (27) tipo -> . FLOAT
    (28) tipo -> . STRING
    (1) empty -> .

    INT             shift and go to state 28
    FLOAT           shift and go to state 24
    STRING          shift and go to state 8
    ID              reduce using rule 1 (empty -> .)

    empty                          shift and go to state 43
    aux                            shift and go to state 44
    tipo                           shift and go to state 45

state 15

    (99) imprimePrint -> PRINT .

    PARENTESIS_IZQ  reduce using rule 99 (imprimePrint -> PRINT .)


state 16

    (92) pickbeeper -> PICK_BEEPER . imprimeParentesisIzq imprimeParentesisDer imprimePuntoYComa
    (100) imprimeParentesisIzq -> . PARENTESIS_IZQ

    PARENTESIS_IZQ  shift and go to state 41

    imprimeParentesisIzq           shift and go to state 46

state 17

    (5) estatuto_2 -> empty .

    END_ELIF        reduce using rule 5 (estatuto_2 -> empty .)
    END_IF          reduce using rule 5 (estatuto_2 -> empty .)
    RETURN          reduce using rule 5 (estatuto_2 -> empty .)
    END_DEF         reduce using rule 5 (estatuto_2 -> empty .)
    END_WHILE       reduce using rule 5 (estatuto_2 -> empty .)
    $end            reduce using rule 5 (estatuto_2 -> empty .)
    END_ELSE        reduce using rule 5 (estatuto_2 -> empty .)


state 18

    (89) move -> MOVE . imprimeParentesisIzq imprimeParentesisDer imprimePuntoYComa
    (100) imprimeParentesisIzq -> . PARENTESIS_IZQ

    PARENTESIS_IZQ  shift and go to state 41

    imprimeParentesisIzq           shift and go to state 47

state 19

    (90) turnright -> TURN_RIGHT . imprimeParentesisIzq imprimeParentesisDer imprimePuntoYComa
    (100) imprimeParentesisIzq -> . PARENTESIS_IZQ

    PARENTESIS_IZQ  shift and go to state 41

    imprimeParentesisIzq           shift and go to state 48

state 20

    (16) opciones -> putbeeper .

    ID              reduce using rule 16 (opciones -> putbeeper .)
    TURN_LEFT       reduce using rule 16 (opciones -> putbeeper .)
    TURN_RIGHT      reduce using rule 16 (opciones -> putbeeper .)
    MOVE            reduce using rule 16 (opciones -> putbeeper .)
    CHECKWALL       reduce using rule 16 (opciones -> putbeeper .)
    PICK_BEEPER     reduce using rule 16 (opciones -> putbeeper .)
    PUT_BEEPER      reduce using rule 16 (opciones -> putbeeper .)
    DEF             reduce using rule 16 (opciones -> putbeeper .)
    IF              reduce using rule 16 (opciones -> putbeeper .)
    PRINT           reduce using rule 16 (opciones -> putbeeper .)
    WHILE           reduce using rule 16 (opciones -> putbeeper .)
    $end            reduce using rule 16 (opciones -> putbeeper .)
    RETURN          reduce using rule 16 (opciones -> putbeeper .)
    END_DEF         reduce using rule 16 (opciones -> putbeeper .)
    END_WHILE       reduce using rule 16 (opciones -> putbeeper .)
    END_IF          reduce using rule 16 (opciones -> putbeeper .)
    END_ELIF        reduce using rule 16 (opciones -> putbeeper .)
    END_ELSE        reduce using rule 16 (opciones -> putbeeper .)


state 21

    (0) S' -> estatuto .



state 22

    (7) opciones -> function . destroyVars
    (81) destroyVars -> . empty
    (1) empty -> .
